# MCServerPP

./: .gitignore  CMakeLists.txt  README.md
MCServer++/Headers/: Net.hpp  Server.hpp
MCServer++/Sources/: Server.cpp  main.cpp
